--- a/turbo.json
+++ b/turbo.json
@@ -4,8 +4,9 @@
     "tasks": {
         "build": {
             "dependsOn": ["^build"],
-            "inputs": ["$TURBO_DEFAULT$", ".env*"],
-            "outputs": [".next/**", "!.next/cache/**"]
+            "inputs": ["$TURBO_DEFAULT$", ".env*", "apps/*/.env*"],
+            "outputs": [".next/**", "!.next/cache/**"],
+            "env": ["API"]
         },
         "lint": {
             "dependsOn": ["^lint"]
