--- a/turbo.json
+++ b/turbo.json
@@ -6,7 +6,7 @@
             "dependsOn": ["^build"],
             "inputs": ["$TURBO_DEFAULT$", ".env*", "apps/*/.env*"],
             "outputs": [".next/**", "!.next/cache/**"],
-            "env": ["API"]
+            "env": ["API=https://next-hono-turborepo-2-0-api.vercel.app"]
         },
         "lint": {
             "dependsOn": ["^lint"]
