--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,13 +3,19 @@
     "scripts": {
         "start": "vercel dev",
         "deploy": "vercel",
-        "turbo:dev": "vercel dev --listen 3001"
+        "turbo:dev": "npm run build && vercel dev --listen 3001",
+        "build": "tsc && tsc-alias",
+        "dev": "tsx watch src/index.ts"
     },
     "type": "module",
     "dependencies": {
         "hono": "^4.6.17"
     },
     "devDependencies": {
-        "@hono/node-server": "^1.13.7"
+        "@hono/node-server": "^1.13.7",
+        "@types/node": "^22.10.7",
+        "tsc-alias": "^1.8.10",
+        "tsx": "^4.19.2",
+        "typescript": "^5.7.3"
     }
 }
