--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,15 +5,21 @@
         "deploy": "vercel",
         "turbo:dev": "npm run build && vercel dev --listen 3001",
         "build": "tsc && tsc-alias",
-        "dev": "tsx watch src/index.ts"
+        "dev": "tsx watch src/index.ts",
+        "db:generate": "drizzle-kit generate",
+        "db:migrate": "drizzle-kit migrate"
     },
     "type": "module",
     "dependencies": {
+        "@vercel/postgres": "^0.10.0",
+        "dotenv": "^16.4.7",
+        "drizzle-orm": "^0.38.4",
         "hono": "^4.6.17"
     },
     "devDependencies": {
         "@hono/node-server": "^1.13.7",
         "@types/node": "^22.10.7",
+        "drizzle-kit": "^0.30.2",
         "tsc-alias": "^1.8.10",
         "tsx": "^4.19.2",
         "typescript": "^5.7.3"
