--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -11,6 +11,7 @@
     },
     "type": "module",
     "dependencies": {
+        "@neondatabase/serverless": "^0.10.4",
         "@vercel/postgres": "^0.10.0",
         "dotenv": "^16.4.7",
         "drizzle-orm": "^0.38.4",
