--- a/turbo.json
+++ b/turbo.json
@@ -6,7 +6,7 @@
             "dependsOn": ["^build"],
             "inputs": ["$TURBO_DEFAULT$", ".env*", "apps/*/.env"],
             "outputs": [".next/**", "!.next/cache/**"],
-            "env": ["API","POSTGRES_URL"]
+            "env": ["API","DATABASE_URL"]
         },
         "lint": {
             "dependsOn": ["^lint"]
